--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,25 @@ Estilos da página index.html
     align-items: center;
 }
 
+body{
+    background-color: #9980FA;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.body{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   
+}
+
+#menu {
+    margin-bottom: 10px;
+    padding: 15px 0;
+    background-color:whitesmoke;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
 #menu li{
     display: inline;
     padding: 20px;
@@ -22,10 +41,12 @@ Estilos da página index.html
 #menu li a{
     text-decoration: none;
     color: black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 
 #menu li a:hover{
-    color: purple;
+    color: blueviolet;
 }
 
 .p-30{
@@ -41,7 +62,7 @@ Estilos da página index.html
 }
 
 .marge {
-    margin: 30px;
+    margin: 50px 50;
 }
 
 .justify {
@@ -55,4 +76,12 @@ Estilos da página index.html
 /*estilos da página de contato.html*/
 .ml-50 {
     margin-left: 50px;
+}
+
+.size{
+    font-size: 13px;
+}
+
+.left{
+    text-align: left;
 }
